--- a/securegroups/templates/smartgroups/groups.html
+++ b/securegroups/templates/smartgroups/groups.html
@@ -192,8 +192,7 @@
                 columnDefs: [
                     {
                         target: 4,
-                        visible: false,
-                        searchable: false
+                        visible: false
                     },
                 ],
                 autoWidth: false
